# dask-flood-mapper

./: .gitignore  .gitlab-ci.yml  .nojekyll  Makefile  README.md  _quarto.yml  index.html  index.qmd  requirements.txt  search.json  setup.cfg
01_local_dask_files/libs/bootstrap/: bootstrap.min.css
notebooks/: 01_local_dask.html  01_local_dask.ipynb  01_local_dask.qmd
site_libs/bootstrap/: bootstrap.min.css
src/dask_flood_mapper/: __init__.py  _version.py  utils.py
tests/: test_meta.py
