[metadata]
name = dask_flood_mapper
version = attr: dask_flood_mapper.__version__
description = my project description
author = Martin Schobben
author_email = martin.schobben@tuwien.ac.at
long_description = file: README.md
platforms = any
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
install_requires =
    jupyter
    folium
    pystac-client
    odc-stac
    dask[complete]
    matplotlib
    numpy
    rioxarray
    geoviews
    datashader
    cartopy
    hvplot
    dask-labextension
    ipywidgets
    jupyter-bokeh

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
